# attio-cli

./: .env.example  .gitignore  CLAUDE.md  README.md  index.html  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.planning/: HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation-records/: .continue-here.md  01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-06-PLAN.md  01-06-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-full-api-coverage/: .continue-here.md  02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-06-PLAN.md  02-06-SUMMARY.md  02-VERIFICATION.md
.planning/phases/03-repl-tests-docs/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-UAT.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
agent-harness/cli_anything/: __init__.py
agent-harness/cli_anything/attio/: ATTIO.md  SKILL.md  __init__.py  attio_cli.py  attributes.py  comments.py  config_cmd.py  entries.py  (+10 more)
docs/workflows/: CHARLES-HANDOFF.md  n8n-attio-to-clay.md  n8n-attio-to-sheets.md  n8n-prospect-intake.md  n8n-reply-to-crm.md  skill-find-or-create-person.md  skill-log-call.md  skill-overdue-tasks.md  skill-workspace-snapshot.md  workflow-morning-pipeline.md  workflow-new-prospect-intake.md  workflow-post-call.md  workflow-weekly-nurture.md
skills/deal-next-step/: SKILL.md
skills/lead-nurture/: SKILL.md
skills/overdue-follow-up/: SKILL.md
skills/pipeline-snapshot/: SKILL.md
skills/post-call-followup/: SKILL.md
temp/: skills-audit.md  stress-test-results.md
(+25 files in other folders)
